test/tests/errors/error-record-no-duplicate-params.sm
// true
// false
// false
/**/
/**/

program {
    record duplicate(param: int, param: string);
}